# odin-core-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
golden-tests/: Cargo.toml
golden-tests/src/: lib.rs
golden-tests/tests/: canonical.rs  diff.rs  end_to_end.rs  forms.rs  json_import.rs  parse.rs  schema.rs  transform.rs  transform_corpus.rs  try_it_verbs.rs  validate.rs
odin-core/: Cargo.toml
odin-core/src/: integration_tests.rs  lib.rs  security_tests.rs
odin-core/src/diff/: mod.rs
odin-core/src/forms/: accessibility.rs  css.rs  mod.rs  parser.rs  renderer.rs  tests.rs  types.rs  units.rs
odin-core/src/parser/: mod.rs  parse_values.rs  parser.rs  parser_impl.rs  streaming.rs  streaming_fast.rs  tests.rs  tokenizer.rs  tokens.rs
odin-core/src/resolver/: mod.rs  schema_flattener.rs
odin-core/src/serializer/: canonicalize_impl.rs  mod.rs  stringify_impl.rs
odin-core/src/transform/: engine.rs  expr.rs  mod.rs  parser.rs
odin-core/src/transform/formatters/: mod.rs
odin-core/src/transform/source_parsers/: mod.rs
odin-core/src/transform/verbs/: collection_verbs.rs  mod.rs  numeric_verbs.rs  string_verbs.rs
odin-core/src/types/: diff.rs  document.rs  errors.rs  mod.rs  options.rs  ordered_map.rs  schema.rs  transform.rs  values.rs
odin-core/src/utils/: base64.rs  json_parser.rs  mod.rs
odin-core/src/validator/: format_validators.rs  invariant_evaluator.rs  mod.rs  schema_definition.rs  schema_enforcement_tests.rs  schema_parser.rs  schema_serializer.rs  validate_redos.rs
